# path-light

docs/: required_pocs.md  specs.md
docs/features/: constant_lights.feature  light_strips.feature
poc/testing/: CMakeLists.txt
poc/testing/src/ArduinoAbstract/: ArduinoPinWrapper.h  ArduinoTimeWrapper.h  IPinWrapper.h  ITimeWrapper.h  consts.h
poc/testing/src/master/: LighterBrain.cpp  LighterBrain.h  MasterMain.cpp
poc/testing/src/slave/: SlaveMain.cpp
poc/testing/test/: FakeIt.h  GtestMain.cpp  LighterBrainTests.cpp
